Move the highestOut properties to the RMSBean
git-svn-id: https://svn.apache.org/repos/asf/webservices/sandesha/trunk/java@494037 13f79535-47bb-0310-9956-ffa450edef68